integrate scopes in execution